// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tile /> should render a board tile with nothing 1`] = `
<styled.div
  isHoverable={false}
  onClick={[Function]}
  tabIndex={0}
  tileSize="medium"
/>
`;

exports[`<Tile /> should render a hoverable board tile 1`] = `
<styled.div
  isHoverable={true}
  onClick={[Function]}
  tabIndex={0}
  tileSize="medium"
/>
`;

exports[`<Tile /> should render a hoverable board tile with hover label 1`] = `
<styled.div
  isHoverable={true}
  onClick={[Function]}
  tabIndex={0}
  tileSize="medium"
>
  <Styled(Text)
    color="#432DF3"
    isUpper={true}
    type="small"
  >
    hover label
  </Styled(Text)>
</styled.div>
`;

exports[`<Tile /> should render a large board tile 1`] = `
<styled.div
  isHoverable={false}
  onClick={[Function]}
  tabIndex={0}
  tileSize="large"
/>
`;

exports[`<Tile /> should render a medium board tile 1`] = `
<styled.div
  isHoverable={false}
  onClick={[Function]}
  tabIndex={0}
  tileSize="medium"
/>
`;

exports[`<Tile /> should render a small board tile 1`] = `
<styled.div
  isHoverable={false}
  onClick={[Function]}
  tabIndex={0}
  tileSize="small"
/>
`;

exports[`<Tile /> should render an anchor board tile 1`] = `
<Styled(UnstyledLink)
  href="#dummy"
  isHoverable={false}
  onClick={[Function]}
  tabIndex={0}
  tileSize="medium"
/>
`;
